# pini

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  test.ini
include/pini/: pini.hpp  util.hpp
src/: main.cpp  pini.cpp  pini.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  pini_test.cpp  test.ini  test.pini
